# AI8-Cert-Challenge

./: .env.example  .gitignore  Dockerfile  EVALUATION_README.md  README.md  advanced_retrieval_example.py  client.py  debug_vector_store.py  docker-compose.yml  evaluate_rag.py  example.py  langsmith_demo.py  pyproject.toml  rag_evaluation_example.py  simple_chain_evaluation.py  simple_evaluation_results_20251025_190354.csv  simple_evaluation_results_20251025_190521.csv  simple_naive_bm25_evaluation.py  simple_naive_rag_demo.py  simple_rag_evaluation.py  start.py  streaming_client.py  test_enhanced_logging.py  test_evaluation.py  writeup.md  writeup.txt
evaluation_results/: all_retriever_results_20251026_000412.csv  all_retriever_results_20251026_011814.csv  all_retriever_summary_20251026_000412.csv  all_retriever_summary_20251026_011814.csv  comprehensive_evaluation_20251021_215233.json  comprehensive_evaluation_20251021_215826.json  comprehensive_evaluation_20251021_222113.json  evaluation_dataset_20251021_183927.csv  evaluation_dataset_20251021_184451.csv  evaluation_dataset_20251021_215155.csv  evaluation_dataset_20251021_221327.csv  evaluation_dataset_20251023_182510.csv  evaluation_dataset_20251025_132815.csv  evaluation_dataset_20251025_141957.csv  evaluation_dataset_20251026_002909.csv  evaluation_dataset_20251026_003352.csv  evaluation_results_20251023_182513.json  evaluation_results_20251023_183333.json  evaluation_results_20251023_191948.json  evaluation_results_20251023_192313.json  evaluation_results_20251023_231450.json  evaluation_results_20251025_131741.json  evaluation_results_20251025_135240.json  evaluation_results_20251025_142723.json  naive_bm25_results_20251025_233206.csv
src/: __init__.py
src/api/: __init__.py  main.py
src/api/endpoints/: __init__.py  health.py  query.py  streaming.py  system.py
src/api/models/: __init__.py  schemas.py  streaming.py
src/api/services/: __init__.py  rag_service.py
src/chains/: __init__.py  prompts.py  rag_chains.py
src/config/: __init__.py  models.py  settings.py
src/core/: __init__.py
src/core/data/: __init__.py  loaders.py  processors.py  validators.py
src/core/embeddings/: __init__.py  cache.py  providers.py
src/evaluation/: __init__.py  config.py  dataset_generator.py  evaluator.py  metrics.py
src/tools/: README.md  __init__.py  student_loan_tools.py  tavily_tool_builder.py  tool_registry.py
src/utils/: __init__.py  decorators.py  exceptions.py  logging.py
src/workflows/: __init__.py  rag_workflow.py  state.py
(+25 files in other folders)
